--- a/src/carbon.scss
+++ b/src/carbon.scss
@@ -104,5 +104,6 @@ $css--plex: true;
 @import 'carbon-components/scss/components/toolbar/toolbar';
 @import 'carbon-components/scss/components/data-table-v2/data-table-v2';
 @import 'carbon-components/scss/components/ui-shell/ui-shell';
+@import 'carbon-components/scss/components/tabs/tabs';
 
 // @import "carbon-components/scss/globals/scss/styles";
