--- a/src/global.css
+++ b/src/global.css
@@ -24,14 +24,9 @@ body {
 .card {
   display: block;
   min-height: 10cm;
-  /* max-height: 20cåm; */
   padding: 0px 10px 10px 10px;
   margin-bottom: 5px;
   border: 0.5px solid black;
-  -webkit-column-break-inside: avoid;
-  -webkit-break-inside: avoid-page;
-  -moz-break-inside: avoid-page;
-  break-inside: avoid-page;
 }
 .cardTitle {
   font-weight: bold;
@@ -63,6 +58,12 @@ body {
     height: auto !important;
     overflow-y: visible !important;
     overflow: visible !important;
+  }
+  .card {
+    -webkit-column-break-inside: avoid;
+    -webkit-break-inside: avoid;
+    -moz-break-inside: avoid;
+    break-inside: avoid;
   }
 }
 
